<resources>
    <string name="app_name">Lab 4</string>
    <string name="splash_title">Iinstagraman</string>
    <string name="author">by EuyPeeps\nalias\nUsamah Nashirul Haq</string>
    <string name="nama">Usamah Nashirul Haq</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="buttonImage">buttonImage</string>
    <string name="welcome">Welcome Back</string>
    <string name="login_text">Login to your account</string>
    <string name="register_text">Create a new account</string>
    <string name="hint_email_field">Email</string>
    <string name="hint_name_field">Name</string>
    <string name="hint_password_hint">Password</string>
    <string name="forgot_passw">Forgot your password?</string>
    <string name="sign_in_reminder">Don\'t have an account? Sign in</string>
    <string name="log_in_reminder">Already have an account? Login</string>
    <string name="logout">Logout</string>
    <string name="greeting">Selamat datang %1$s di aplikasi Iinstagraman!</string>
    <string name="textview_placeholder">Placeholder</string>
    <string name="surprise_button_text">Get Surprise</string>
    <string name="i_smart">Woowee!!</string>
    <string name="wait_for_it">wait for it...</string>


</resources>