<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/bottom_sheet_login"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/shape_bottom_sheet_login"
        android:orientation="vertical"
        android:padding="20dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/shape_edit_text_field"
            android:hint="@string/hint_email_field"
            android:inputType="textEmailAddress"
            android:padding="12.5dp" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/shape_edit_text_field"
            android:hint="@string/hint_password_hint"
            android:inputType="textPassword|textWebPassword"
            android:padding="12.5dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_login_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/forgot_passw"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/sign_in_reminder"
            android:textColor="@color/loginColor"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>
</layout>